--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+  
 }
 .contact{
     text-align: right;
@@ -27,11 +30,18 @@ body{
 }
 .navbar{
     border-bottom: 3px solid gray;
+    width: 100%;
 }
 .nav-bg{
     background-color: rgb(36, 36, 179);
 }
-
+.carousel-item img{
+    height: 360px;
+}
+.carousel-caption h4 {
+    color: white;
+    font-weight: 600;
+}
 .logo{
     font-size: 25px;
 }
@@ -51,7 +61,9 @@ body{
     text-align: center;
     color: white;
     padding-top: 30px;
-    padding-bottom: 55px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 45px;
     transition: 0.5s;
 }
 .vc-card:hover{
@@ -60,6 +72,11 @@ body{
 .vc-card img {
     border-radius: 100%;
     width: 40%;
+}
+.marque-slider{
+    border-radius: 20px;
+    text-align: center;
+    border: 2px solid rgb(219, 215, 215);
 }
 .click-here-button{
     border: none;
@@ -126,7 +143,7 @@ body{
     border-right: 1px solid rgb(235, 228, 228);
     border-bottom: 1px solid rgb(235, 228, 228);
     border-radius: 5px;
-    height: 450px;
+    height: 500px;
     box-shadow: 4px 5px 5px gray;
 }
 .all-departments h5{
@@ -139,7 +156,7 @@ body{
 
 .instututes p{
     background-color: #f0f9ff;
-    padding: 30px 15px 30px 10px;
+    padding: 20px 15px 20px 20px;
     font-weight: 600;
     border-top: 4px solid #999;
     border-left: 1px solid rgb(235, 228, 228);
@@ -156,6 +173,8 @@ body{
     border: 1px solid rgb(235, 228, 228);
 }
 .article-card p{
+    padding: 5px;
+    font-weight: 500;
     color: blue;
 }
 .view-all h6{
