--- a/style.css
+++ b/style.css
@@ -184,6 +184,9 @@ body{
     text-align: center;
     border-radius: 5px;
 }
+.feature-slider img{
+    border-radius: 15px;
+}
 .footer{
     background-color: #444;
 }
@@ -192,10 +195,10 @@ body{
     color: rgb(51, 51, 218);
     margin-top: 30px;
     margin-bottom: 20px;
-    padding-left: 15px;
+    padding-left: 25px;
 }
 .footer-link p{
-    padding-left: 15px;
+    padding-left: 25px;
     color: white;
 }
 .icon{
