--- a/style.css
+++ b/style.css
@@ -184,9 +184,41 @@ body{
     text-align: center;
     border-radius: 5px;
 }
-.feature-slider img{
+
+/* carousel */
+.carousel {
+    /* background: #EEE; */
+  }
+  
+  .carousel-cell {
+    width: 50%;
+    height: 300px;
+    margin-right: 10px;
+    background: #8C8;
+    border-radius: 5px;
+    text-align: center;
+ 
+  }
+
+  .carousel-cell img{
+     margin-top: 50px;
+     width: 150px;
+     height: 150px;
+     border-radius: 100%;
+  }
+  
+  /* cell number */
+  .carousel-cell:before {
+    display: block;
+    text-align: center;
+    line-height: 200px;
+    font-size: 80px;
+    color: white;
+  }
+
+/* .feature-slider img{
     border-radius: 15px;
-}
+} */
 .footer{
     background-color: #444;
 }
